force-app/main/default/objects/InsurancePolicyCoverage__c/InsurancePolicyCoverage__c.object-meta.xml
<CustomObject>
    <label>Insurance Policy Coverage</label>
    <nameField>
        <displayFormat>COV-{00000}</displayFormat>
        <label>Insurance Policy Coverage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance Policy Coverages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>