force-app/main/default/objects/InsurancePolicyCoverage__c/fields/GarantieUsed__c.field-meta.xml
<CustomField>
    <fullName>GarantieUsed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Garantie touchée</label>
    <type>Checkbox</type>
</CustomField>