force-app/main/default/objects/InsurancePolicyCoverage__c/fields/InsurancePolicy__c.field-meta.xml
<CustomField>
    <fullName>InsurancePolicy__c</fullName>
    <label>Insurance Policy</label>
    <referenceTo>InsurancePolicy__c</referenceTo>
    <relationshipLabel>Insurance Policy Coverages</relationshipLabel>
    <relationshipName>InsurancePolicyCoverages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>