force-app/main/default/objects/InsurancePolicyCoverage__c/fields/NomDeLaGarantie__c.field-meta.xml
<CustomField>
    <fullName>NomDeLaGarantie__c</fullName>
    <label>Nom de la garantie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>