force-app/main/default/objects/InsurancePolicyCoverage__c/fields/TypeGarantie__c.field-meta.xml
<CustomField>
    <fullName>TypeGarantie__c</fullName>
    <label>Type de la garantie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Materielle</fullName>
                <label>Matérielle</label>
            </value>
            <value>
                <fullName>Corporelle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>